# ida_graph_parser

./: .gitignore  README.md  annotate_ida_db.py  cache.json  cache_full_func.json  cam_viz.ipynb  function_titles.jsonl  naive_two_pass_summary.py  pyproject.toml  reorder_and_pad.json  reorder_and_pad2.json  requirements.txt  sample.ipynb  simple_graph_processing.ipynb  summaries_functions_qwen2.5-coder-7b.json  summaries_leiden_comm.json  summarized_with_edge_types.json  wip.ipynb
.ipynb_checkpoints/: sample-checkpoint.ipynb
data/: function_summaries.jsonl  function_titles.jsonl
notebooks/: cam_viz.ipynb  community_detection.ipynb  simple_graph_processing.ipynb  visualizations.ipynb  wip.ipynb  wip_with_communities.ipynb
src/: __init__.py  edge_removal.py  extract_cfg.py  extract_cfg_standalone.py  function_call_graph.py  graph_viz_layout.py  hierarchical_summaries.py  llm_interface.py  naive_two_pass_summary.py  name_and_condense.py  summarize_graph.py  test_collapse.py  test_summarize_graph.py  visualize_cfg.py
