[project]
name = "ida-graph-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "networkx",
    "pydot>=3.0.1",
    "idapro>=0.0.9",
    "ipysigma",
    "pandas-stubs~=3.0.3",
    "openai>=1.0.0",
    "nest-asyncio>=1.5.0",
    "tqdm>=4.68.2",
    "ipywidgets>=8.1.8",
    "jsonlines>=4.0.0",
]
