[project]
authors = [
  {name = "Mark Adams", email = "mark.m.adams@mail.mcgill.ca"},
  {name = "Camille Archambault", email = "camille.archambault@mail.mcgill.ca"},
  {name = "Mitchell Petingola", email = "mitchell.petingola@queensu.ca"},
  {name = "Louis-François Bissonnette", email = "louis-francois.bissonnette@rmc-cmr.ca"},
]
maintainers = [
  {name = "Mark Adams", email = "mark.m.adams@mail.mcgill.ca"}
]
readme = "README.md"
license = "AGPL-3.0-only"
name = "ida-graph-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "networkx",
    "pydot>=3.0.1",
    "idapro>=0.0.9",
    "ipysigma",
    "pandas-stubs~=3.0.3",
    "openai>=1.0.0",
    "nest-asyncio>=1.5.0",
    "tqdm>=4.68.2",
    "ipywidgets>=8.1.8",
    "jsonlines>=4.0.0",
    "ida-domain>=0.5.0",
    "leidenalg>=0.12.0",
    "logging>=0.4.9.6",
    "pytest>=9.1.1",
    "pluggy>=1.6.0",
    "igraph>=1.0.0",
    "iniconfig>=2.3.0",
    "texttable>=1.7.0",
    "ollama>=0.6.2",
]
